added the single unit pod in sets

--- a/products-minipod.html
+++ b/products-minipod.html
@@ -467,7 +467,31 @@
         <p class="text__body text--center">
           Our modular design allows Minipods to be customized into a set of units and addons that fit your needs best.
         </p>
+
         <div class="flex flex-col gap--xlg mtop--xxl">
+          <div class="minipod__set gap--lg ai-end jc-c">
+            <img class="minipod__set-img" src="images/illustrations/minipod-1unit.svg"
+              alt="Minipod Single Unit Illustration">
+            <div class="minipod__set-text flex flex-col gap--sm ai-c">
+              <h4>Single Unit</h4>
+              <div class="card-9 minipod__set-detail flex ai-c gap--md">
+                <img class="icon--sm" src="images/icons/icon_power-capacity.svg" alt="Total Power Capacity Icon">
+                <h6 class="minipod__set-heading">Total Capacity</h6>
+                <h6 class="text--blue">300kW</h6>
+              </div>
+              <div class="card-9 minipod__set-detail flex ai-c gap--md">
+                <img class="icon--sm" src="images/icons/icon_switch-gear.svg" alt="Switch Gear Icon">
+                <h6 class="minipod__set-heading">Switch Gear</h6>
+                <h6 class="text--blue">4 Set or higher</h6>
+              </div>
+              <div class="card-9 minipod__set-detail flex ai-c gap--md">
+                <img class="icon--sm" src="images/icons/icon_coin.svg" alt="Dollar Coin Icon">
+                <h6 class="minipod__set-heading">Approx. Cost</h6>
+                <h6 class="text--blue">$39,999 - $45,500</h6>
+              </div>
+            </div>
+          </div>
+
           <div class="minipod__set gap--lg ai-end jc-c">
             <img class="minipod__set-img" src="images/illustrations/minipod-3set.svg"
               alt="Minipod 3 Unit Set Illustration">
