changed configs to pricing

--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
                 Smart Power Distribution
                 Unit (SPDU)
               </span> that comes along with it. The SPDU and its user interface give you the power to control numerous
-              configurations to customize your Minipod and miners.</p>
+              pricing to customize your Minipod and miners.</p>
             <a href="products-minipod.html" class="btn btn--primary btn--white">Products <svg class="btn__chevron"
                 width="13" height="12" viewBox="0 0 13 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M7.49 6L7.5 6" />
@@ -457,7 +457,7 @@
           <picture class="app__mockup app__mockup--left">
             <source srcset="images/illustrations/app-control-mobile.png" media="(max-width:425px)">
             <img src="images/illustrations/app-control.png"
-              alt="Mockup of the Digital Shovel web application showcasing some the customizable configurations.">
+              alt="Mockup of the Digital Shovel web application showcasing some the customizable pricing.">
           </picture>
         </div>
       </article>
