--- a/products-minipod.html
+++ b/products-minipod.html
@@ -148,7 +148,7 @@
         </li>
         <span class="subnav__divider">|</span>
         <li>
-          <a class="subnav__link subnav__link--configs" href="#configurations">Configurations</a>
+          <a class="subnav__link subnav__link--pricing" href="#pricing">Pricing</a>
         </li>
       </ul>
     </div>
@@ -471,10 +471,10 @@
       </div>
     </section>
 
-    <section id="configurations" class="sets">
+    <section id="pricing" class="sets">
       <div class="container flex flex-col gap--md ai-c">
         <h2 class="text__heading">
-          Available <span class="text--blue">Configurations</span>
+          Configurations & <span class="text--blue">Pricing</span>
         </h2>
         <p class="text__body text--center">
           Our modular design allows Minipods to be customized into a set of units and addons that fit your needs best.
@@ -681,7 +681,7 @@
               <tr class="table__row">
                 <th class="table__subheading">
                   <span class="table__tooltip">The Smart Power Distribution Unit (SPDU), exclusively produced by Digital
-                    Shovel, provides the power to remotely connect to Minipods, take full control of configurations, and
+                    Shovel, provides the power to remotely connect to Minipods, take full control of pricing, and
                     monitor current and past events.</span>Smart Power Distribution Unit
                 </th>
                 <td class="table__checkmark"></td>
