added new font & cyber monday ad

--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
 </head>
 
 <body>
-
   <header class="header">
 
     <nav class="navbar">
@@ -154,6 +153,9 @@
             <small>26-28 July</small><small>•</small><small class="text--emphasis">Mining Disrupt
               2022</small><small>•</small><small>Register now</small>
           </a> -->
+
+          <a href="contact.html"><img class="hero__black-friday" src="images/illustrations/ds_cyber-monday_v3.svg" alt="Black Friday and Cyber Monday Discount"></a>
+
           <h1 class="hero__heading">
             Revolutionary <emphasis>crypto mining</emphasis> containers
           </h1>
