--- a/products-minipod.html
+++ b/products-minipod.html
@@ -499,7 +499,13 @@
               <div class="card-9 minipod__set-detail flex ai-c gap--md">
                 <img class="icon--sm" src="images/icons/icon_coin.svg" alt="Dollar Coin Icon">
                 <h6 class="minipod__set-heading">Approx. Cost</h6>
+                <img class="brush-stroke" src="images/illustrations/brush-stroke.svg" alt="Brush Stroke">
                 <h6 class="text--blue">$39,999 - $45,500</h6>
+              </div>
+              <div class="card-9 minipod__set-detail flex ai-c gap--md">
+                <img class="icon--sm" src="images/icons/icon_coin.svg" alt="Dollar Coin Icon">
+                <h6 class="minipod__set-heading">Current Deal</h6>
+                <h6 class="text--blue">$25,000</h6>
               </div>
             </div>
           </div>
