Major color update

--- a/thanks.html
+++ b/thanks.html
@@ -38,9 +38,9 @@
       <a href="index.html" class="navbar__logo" aria-label="Digital Shovel Logo">
         <svg title="Digital Shovel Logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 249.45 80.96">
           <g>
-            <path fill="var(--primary-color)" d="M38.54.49H0v25.7h12.85V13.34h25.69v12.85h12.85V.49H38.54z" />
-            <rect fill="var(--primary-color)" x="19.27" y="19.76" width="12.85" height="25.7" rx="4" />
-            <path fill="var(--primary-color)"
+            <path fill="var(--blue-500)" d="M38.54.49H0v25.7h12.85V13.34h25.69v12.85h12.85V.49H38.54z" />
+            <rect fill="var(--blue-500)" x="19.27" y="19.76" width="12.85" height="25.7" rx="4" />
+            <path fill="var(--blue-500)"
               d="M38.54 47.66 25.52 60.69 12.85 48.02V32.61H0V53.4h.06l25.46 25.46 25.82-25.82h.05V32.61H38.54v15.05z" />
             <path fill="var(--warm-gray-500)"
               d="M70.75 37.25V.53H84a15 15 0 0 1 10.86 4.22 14.43 14.43 0 0 1 4.36 10.84v6.6A14.4 14.4 0 0 1 94.86 33 15 15 0 0 1 84 37.25ZM79.3 7.09v23.6h4.13a6.48 6.48 0 0 0 5.32-2.33 9.39 9.39 0 0 0 1.92-6.17v-6.65a9.29 9.29 0 0 0-1.92-6.13 6.5 6.5 0 0 0-5.32-2.32ZM110.52 37.25H102V.53h8.5ZM142.92 32.18a16 16 0 0 1-5.43 3.91 20.71 20.71 0 0 1-8.93 1.69 15.06 15.06 0 0 1-11.06-4.19 14.59 14.59 0 0 1-4.25-10.87v-7.66a14.83 14.83 0 0 1 4.15-10.85A14.34 14.34 0 0 1 128.08 0q7.09 0 10.62 3.28a13.19 13.19 0 0 1 4 9l-.05.15h-8A7.7 7.7 0 0 0 132.79 8a6 6 0 0 0-4.43-1.46 5.74 5.74 0 0 0-4.79 2.36 9.7 9.7 0 0 0-1.82 6.1v7.71a9.82 9.82 0 0 0 1.8 6.17 5.93 5.93 0 0 0 5 2.33 13.84 13.84 0 0 0 3.69-.38 5.84 5.84 0 0 0 2.11-1V24h-5.77v-5.61h14.33ZM154.61 37.25h-8.5V.53h8.5ZM184.81 7.09h-9.69v30.16h-8.55V7.09H157V.53h27.85ZM202.82 30.11h-11.57l-2.07 7.14h-8.58L192.46.53h9.15l11.88 36.72h-8.57Zm-9.68-6.55h7.79l-3.83-13.14h-.1ZM223.66 30.69h15.81v6.56h-24.36V.53h8.55ZM90.24 70.69a3.7 3.7 0 0 0-1.28-3 16.67 16.67 0 0 0-4.62-2.24q-7-2.19-10.31-4.7a8.52 8.52 0 0 1-3.36-7.26 8.76 8.76 0 0 1 4-7.46 17.05 17.05 0 0 1 10.15-2.85 15.4 15.4 0 0 1 10 3.14 9.58 9.58 0 0 1 3.77 8.08v.15h-8.32A4.66 4.66 0 0 0 88.78 51a5.85 5.85 0 0 0-4.11-1.37 6.43 6.43 0 0 0-4 1.14 3.41 3.41 0 0 0-1.46 2.79 3 3 0 0 0 1.48 2.59 28.9 28.9 0 0 0 5.53 2.43 26 26 0 0 1 9.42 4.59 9.38 9.38 0 0 1 3.17 7.49A8.85 8.85 0 0 1 95 78.22Q91.22 81 85 81a18.64 18.64 0 0 1-10.82-3.14 10 10 0 0 1-4.44-9l.05-.16h8.3c0 2.13.57 3.64 1.71 4.55a8.33 8.33 0 0 0 5.2 1.28 6.18 6.18 0 0 0 3.94-1.06 3.4 3.4 0 0 0 1.3-2.78ZM131.42 80.43h-8.5V65.65h-13.6v14.78h-8.55V43.71h8.55v15.38h13.6V43.71h8.5ZM165 65.37a15.4 15.4 0 0 1-4.3 11.19A15 15 0 0 1 149.44 81a15 15 0 0 1-15.66-15.59v-6.65a15.32 15.32 0 0 1 4.32-11.17 16.61 16.61 0 0 1 22.54 0A15.29 15.29 0 0 1 165 58.76Zm-8.5-6.66a10.58 10.58 0 0 0-1.86-6.45 6.75 6.75 0 0 0-10.51 0 10.67 10.67 0 0 0-1.83 6.46v6.66a10.75 10.75 0 0 0 1.85 6.51 6.2 6.2 0 0 0 5.31 2.52 6.06 6.06 0 0 0 5.2-2.52 10.81 10.81 0 0 0 1.84-6.51ZM180 70.47l.25 1.33h.15l.26-1.23 7.28-26.86h8.93l-11.9 36.72h-9.21l-11.89-36.72h8.9ZM220.83 64.72h-14.41v9.15h17v6.56h-25.55V43.71h25.58v6.55h-17v7.9h14.41ZM233.64 73.87h15.81v6.56h-24.36V43.71h8.55Z" />
@@ -53,9 +53,9 @@
         <li><a href="index.html" class="navbar__logo mobile" aria-label="Digital Shovel Logo">
             <svg title="Digital Shovel Logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 249.45 80.96">
               <g>
-                <path fill="var(--primary-color)" d="M38.54.49H0v25.7h12.85V13.34h25.69v12.85h12.85V.49H38.54z" />
-                <rect fill="var(--primary-color)" x="19.27" y="19.76" width="12.85" height="25.7" rx="4" />
-                <path fill="var(--primary-color)"
+                <path fill="var(--blue-500)" d="M38.54.49H0v25.7h12.85V13.34h25.69v12.85h12.85V.49H38.54z" />
+                <rect fill="var(--blue-500)" x="19.27" y="19.76" width="12.85" height="25.7" rx="4" />
+                <path fill="var(--blue-500)"
                   d="M38.54 47.66 25.52 60.69 12.85 48.02V32.61H0V53.4h.06l25.46 25.46 25.82-25.82h.05V32.61H38.54v15.05z" />
                 <path fill="var(--warm-gray-500)"
                   d="M70.75 37.25V.53H84a15 15 0 0 1 10.86 4.22 14.43 14.43 0 0 1 4.36 10.84v6.6A14.4 14.4 0 0 1 94.86 33 15 15 0 0 1 84 37.25ZM79.3 7.09v23.6h4.13a6.48 6.48 0 0 0 5.32-2.33 9.39 9.39 0 0 0 1.92-6.17v-6.65a9.29 9.29 0 0 0-1.92-6.13 6.5 6.5 0 0 0-5.32-2.32ZM110.52 37.25H102V.53h8.5ZM142.92 32.18a16 16 0 0 1-5.43 3.91 20.71 20.71 0 0 1-8.93 1.69 15.06 15.06 0 0 1-11.06-4.19 14.59 14.59 0 0 1-4.25-10.87v-7.66a14.83 14.83 0 0 1 4.15-10.85A14.34 14.34 0 0 1 128.08 0q7.09 0 10.62 3.28a13.19 13.19 0 0 1 4 9l-.05.15h-8A7.7 7.7 0 0 0 132.79 8a6 6 0 0 0-4.43-1.46 5.74 5.74 0 0 0-4.79 2.36 9.7 9.7 0 0 0-1.82 6.1v7.71a9.82 9.82 0 0 0 1.8 6.17 5.93 5.93 0 0 0 5 2.33 13.84 13.84 0 0 0 3.69-.38 5.84 5.84 0 0 0 2.11-1V24h-5.77v-5.61h14.33ZM154.61 37.25h-8.5V.53h8.5ZM184.81 7.09h-9.69v30.16h-8.55V7.09H157V.53h27.85ZM202.82 30.11h-11.57l-2.07 7.14h-8.58L192.46.53h9.15l11.88 36.72h-8.57Zm-9.68-6.55h7.79l-3.83-13.14h-.1ZM223.66 30.69h15.81v6.56h-24.36V.53h8.55ZM90.24 70.69a3.7 3.7 0 0 0-1.28-3 16.67 16.67 0 0 0-4.62-2.24q-7-2.19-10.31-4.7a8.52 8.52 0 0 1-3.36-7.26 8.76 8.76 0 0 1 4-7.46 17.05 17.05 0 0 1 10.15-2.85 15.4 15.4 0 0 1 10 3.14 9.58 9.58 0 0 1 3.77 8.08v.15h-8.32A4.66 4.66 0 0 0 88.78 51a5.85 5.85 0 0 0-4.11-1.37 6.43 6.43 0 0 0-4 1.14 3.41 3.41 0 0 0-1.46 2.79 3 3 0 0 0 1.48 2.59 28.9 28.9 0 0 0 5.53 2.43 26 26 0 0 1 9.42 4.59 9.38 9.38 0 0 1 3.17 7.49A8.85 8.85 0 0 1 95 78.22Q91.22 81 85 81a18.64 18.64 0 0 1-10.82-3.14 10 10 0 0 1-4.44-9l.05-.16h8.3c0 2.13.57 3.64 1.71 4.55a8.33 8.33 0 0 0 5.2 1.28 6.18 6.18 0 0 0 3.94-1.06 3.4 3.4 0 0 0 1.3-2.78ZM131.42 80.43h-8.5V65.65h-13.6v14.78h-8.55V43.71h8.55v15.38h13.6V43.71h8.5ZM165 65.37a15.4 15.4 0 0 1-4.3 11.19A15 15 0 0 1 149.44 81a15 15 0 0 1-15.66-15.59v-6.65a15.32 15.32 0 0 1 4.32-11.17 16.61 16.61 0 0 1 22.54 0A15.29 15.29 0 0 1 165 58.76Zm-8.5-6.66a10.58 10.58 0 0 0-1.86-6.45 6.75 6.75 0 0 0-10.51 0 10.67 10.67 0 0 0-1.83 6.46v6.66a10.75 10.75 0 0 0 1.85 6.51 6.2 6.2 0 0 0 5.31 2.52 6.06 6.06 0 0 0 5.2-2.52 10.81 10.81 0 0 0 1.84-6.51ZM180 70.47l.25 1.33h.15l.26-1.23 7.28-26.86h8.93l-11.9 36.72h-9.21l-11.89-36.72h8.9ZM220.83 64.72h-14.41v9.15h17v6.56h-25.55V43.71h25.58v6.55h-17v7.9h14.41ZM233.64 73.87h15.81v6.56h-24.36V43.71h8.55Z" />
@@ -111,23 +111,23 @@
         <!-- <li><a class="navbar__link" href="faq.html">Faq</a></li> -->
         <li><a class="navbar__link" href="contact.html">Contact Us</a></li>
         <!-- <li><a href="http://demo.shovel.digital/" target="_blank" class="btn btn--primary mobile">Login -->
-            <svg class="btn__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
-              xmlns="http://www.w3.org/2000/svg">
-              <path d="M7.49 6L7.5 6" stroke="var(--blue-100)" stroke-width="2" stroke-linecap="round"
-                stroke-linejoin="round" />
-              <path d="M2.5 1L7.95455 6L2.5 11" stroke="var(--blue-100)" stroke-width="2" stroke-linecap="round"
-                stroke-linejoin="round" />
-            </svg>
-          </a>
+        <svg class="btn__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
+          xmlns="http://www.w3.org/2000/svg">
+          <path d="M7.49 6L7.5 6" stroke="var(--blue-50)" stroke-width="2" stroke-linecap="round"
+            stroke-linejoin="round" />
+          <path d="M2.5 1L7.95455 6L2.5 11" stroke="var(--blue-50)" stroke-width="2" stroke-linecap="round"
+            stroke-linejoin="round" />
+        </svg>
+        </a>
         </li>
       </ul>
 
       <!-- <a href="http://demo.shovel.digital/" target="_blank" class="btn btn__navbar btn--primary">Login
         <svg class="btn__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
           xmlns="http://www.w3.org/2000/svg">
-          <path d="M7.49 6L7.5 6" stroke="var(--blue-100)" stroke-width="2" stroke-linecap="round"
+          <path d="M7.49 6L7.5 6" stroke="var(--blue-50)" stroke-width="2" stroke-linecap="round"
             stroke-linejoin="round" />
-          <path d="M2.5 1L7.95455 6L2.5 11" stroke="var(--blue-100)" stroke-width="2" stroke-linecap="round"
+          <path d="M2.5 1L7.95455 6L2.5 11" stroke="var(--blue-50)" stroke-width="2" stroke-linecap="round"
             stroke-linejoin="round" />
         </svg>
       </a> -->
