added sparkle animation to the minipod

--- a/products-minipod.html
+++ b/products-minipod.html
@@ -5,6 +5,8 @@
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description"
+    content="Digital Shovel helps businesses scale Crypto-Mining operations with turn-key mobile units. With low energy cost, and high security, we help businesses with managed and unmanaged miner hosting.">
 
   <!-- Custom CSS -->
   <link rel="stylesheet" href="dist/style.min.css">
@@ -21,13 +23,16 @@
       rel="stylesheet">
   </noscript>
 
-
   <!-- Javascript -->
   <script defer src="/app/js/home.js"></script>
   <script defer src="/app/js/scroll-detection.js"></script>
   <script defer src="/app/js/nav-toggle.js"></script>
   <!-- <script defer src="/app/js/detect.min.js"></script>
-  <script defer src="/app/js/detect-actions.js"></script> -->
+    <script defer src="/app/js/detect-actions.js"></script> -->
+
+  <!-- GreenSock -->
+  <script defer src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js"></script>
+  <script defer src="/app/js/sparkles.js"></script>
 
   <title>Digital Shovel - Minipod</title>
 </head>
@@ -501,10 +506,32 @@
                 <h6 class="minipod__set-heading">Approx. Cost</h6>
                 <h6 class="text--blue text--discount">$39,999 - $45,500</h6>
               </div>
-              <div class="card-9 minipod__set-detail flex ai-c gap--md">
-                <img class="icon--sm" src="images/icons/icon_coin-red.svg" alt="Dollar Coin Icon">
+              <div class="card-9 card-9--deal minipod__set-detail flex ai-c gap--md">
+                <img class="icon--sm" src="images/icons/icon_coin-yellow.svg" alt="Dollar Coin Icon">
                 <h6 class="minipod__set-heading">Current Deal</h6>
-                <h6 class="text--red text--emphasis">$25,000</h6>
+                <h6 class="text--yellow text--emphasis">$25,000</h6>
+                <div class="sparkle-container">
+                  <svg width="16" height="16" viewBox="0 0 184 184" fill="none" class="sparkle sparkle-1">
+                    <path
+                      d="M92 0C92 0 96 63.4731 108.263 75.7365C120.527 88 184 92 184 92C184 92 118.527 98 108.263 108.263C98 118.527 92 184 92 184C92 184 86.4731 119 75.7365 108.263C65 97.5269 0 92 0 92C0 92 63.9731 87.5 75.7365 75.7365C87.5 63.9731 92 0 92 0Z"
+                      fill="#FFC700"></path>
+                  </svg>
+                  <svg width="16" height="16" viewBox="0 0 184 184" fill="none" class="sparkle sparkle-2">
+                    <path
+                      d="M92 0C92 0 96 63.4731 108.263 75.7365C120.527 88 184 92 184 92C184 92 118.527 98 108.263 108.263C98 118.527 92 184 92 184C92 184 86.4731 119 75.7365 108.263C65 97.5269 0 92 0 92C0 92 63.9731 87.5 75.7365 75.7365C87.5 63.9731 92 0 92 0Z"
+                      fill="#FFC700"></path>
+                  </svg>
+                  <svg width="16" height="16" viewBox="0 0 184 184" fill="none" class="sparkle sparkle-3">
+                    <path
+                      d="M92 0C92 0 96 63.4731 108.263 75.7365C120.527 88 184 92 184 92C184 92 118.527 98 108.263 108.263C98 118.527 92 184 92 184C92 184 86.4731 119 75.7365 108.263C65 97.5269 0 92 0 92C0 92 63.9731 87.5 75.7365 75.7365C87.5 63.9731 92 0 92 0Z"
+                      fill="#FFC700"></path>
+                  </svg>
+                  <svg width="16" height="16" viewBox="0 0 184 184" fill="none" class="sparkle sparkle-4">
+                    <path
+                      d="M92 0C92 0 96 63.4731 108.263 75.7365C120.527 88 184 92 184 92C184 92 118.527 98 108.263 108.263C98 118.527 92 184 92 184C92 184 86.4731 119 75.7365 108.263C65 97.5269 0 92 0 92C0 92 63.9731 87.5 75.7365 75.7365C87.5 63.9731 92 0 92 0Z"
+                      fill="#FFC700"></path>
+                  </svg>
+                </div>
               </div>
             </div>
           </div>
