--- a/products-minipod.html
+++ b/products-minipod.html
@@ -501,8 +501,8 @@
                 <h6 class="minipod__set-heading">Switch Gear</h6>
                 <h6 class="text--blue">4 Set or higher</h6>
               </div>
-              <div class="card-9 minipod__set-detail flex ai-c gap--md">
-                <img class="icon--sm" src="images/icons/icon_coin.svg" alt="Dollar Coin Icon">
+              <div class="card-9 card-9--disabled minipod__set-detail flex ai-c gap--md">
+                <img class="icon--sm" src="images/icons/icon_coin-gray.svg" alt="Dollar Coin Icon">
                 <h6 class="minipod__set-heading">Approx. Cost</h6>
                 <h6 class="text--blue text--discount">$39,999 - $45,500</h6>
               </div>
