removed cyber monday deal

--- a/products-minipod.html
+++ b/products-minipod.html
@@ -499,37 +499,10 @@
                 <h6 class="minipod__set-heading">Switch Gear</h6>
                 <h6 class="text--blue">4 Set or higher</h6>
               </div>
-              <div class="card-9 card-9--disabled minipod__set-detail flex ai-c gap--md">
-                <img class="icon--sm" src="images/icons/icon_coin-gray.svg" alt="Dollar Coin Icon">
+              <div class="card-9 minipod__set-detail flex ai-c gap--md">
+                <img class="icon--sm" src="images/icons/icon_coin.svg" alt="Dollar Coin Icon">
                 <h6 class="minipod__set-heading">Approx. Cost</h6>
-                <h6 class="text--blue text--discount">$39,999 - $45,500</h6>
-              </div>
-              <div class="card-9 card-9--deal minipod__set-detail flex ai-c gap--md">
-                <img class="icon--sm" src="images/icons/icon_coin-yellow.svg" alt="Dollar Coin Icon">
-                <h6 class="minipod__set-heading">Current Deal</h6>
-                <h6 class="text--yellow text--emphasis">$25,000</h6>
-                <div class="sparkle-container">
-                  <svg width="16" height="16" viewBox="0 0 184 184" fill="none" class="sparkle sparkle-1">
-                    <path
-                      d="M92 0C92 0 96 63.4731 108.263 75.7365C120.527 88 184 92 184 92C184 92 118.527 98 108.263 108.263C98 118.527 92 184 92 184C92 184 86.4731 119 75.7365 108.263C65 97.5269 0 92 0 92C0 92 63.9731 87.5 75.7365 75.7365C87.5 63.9731 92 0 92 0Z"
-                      fill="#FFC700"></path>
-                  </svg>
-                  <svg width="16" height="16" viewBox="0 0 184 184" fill="none" class="sparkle sparkle-2">
-                    <path
-                      d="M92 0C92 0 96 63.4731 108.263 75.7365C120.527 88 184 92 184 92C184 92 118.527 98 108.263 108.263C98 118.527 92 184 92 184C92 184 86.4731 119 75.7365 108.263C65 97.5269 0 92 0 92C0 92 63.9731 87.5 75.7365 75.7365C87.5 63.9731 92 0 92 0Z"
-                      fill="#FFC700"></path>
-                  </svg>
-                  <svg width="16" height="16" viewBox="0 0 184 184" fill="none" class="sparkle sparkle-3">
-                    <path
-                      d="M92 0C92 0 96 63.4731 108.263 75.7365C120.527 88 184 92 184 92C184 92 118.527 98 108.263 108.263C98 118.527 92 184 92 184C92 184 86.4731 119 75.7365 108.263C65 97.5269 0 92 0 92C0 92 63.9731 87.5 75.7365 75.7365C87.5 63.9731 92 0 92 0Z"
-                      fill="#FFC700"></path>
-                  </svg>
-                  <svg width="16" height="16" viewBox="0 0 184 184" fill="none" class="sparkle sparkle-4">
-                    <path
-                      d="M92 0C92 0 96 63.4731 108.263 75.7365C120.527 88 184 92 184 92C184 92 118.527 98 108.263 108.263C98 118.527 92 184 92 184C92 184 86.4731 119 75.7365 108.263C65 97.5269 0 92 0 92C0 92 63.9731 87.5 75.7365 75.7365C87.5 63.9731 92 0 92 0Z"
-                      fill="#FFC700"></path>
-                  </svg>
-                </div>
+                <h6 class="text--blue">$39,999 - $45,500</h6>
               </div>
             </div>
           </div>
