added youtube video

--- a/index.html
+++ b/index.html
@@ -135,14 +135,6 @@
 
   </header>
 
-  <div class="scroll scroll__home">
-    <!-- <div class="scroll__mouse"></div> -->
-    <span class="scroll__text">scroll for more</span>
-    <svg class="scroll__arrow" width="13" height="12" viewBox="0 0 13 12" fill="none"
-      xmlns="http://www.w3.org/2000/svg">
-      <path d="M2.5 1L7.95455 6L2.5 11" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-    </svg>
-  </div>
 
   <main class="main">
 
@@ -157,6 +149,8 @@
           <h1 class="hero__heading">
             Revolutionary <emphasis>crypto mining</emphasis> containers
           </h1>
+          <iframe width="420" height="345" src="https://www.youtube.com/watch?v=wbr2C32bpQc?autoplay=1&mute=1">
+          </iframe>
           <p class="hero__body hero__body--home">
             Discover our continued innovation, competitive pricing, and what really sets us apart by exploring our
             offering.
@@ -179,6 +173,15 @@
           </div>
         </div>
         <div class="hero__minipod">
+
+          <div class="scroll scroll__home">
+            <!-- <div class="scroll__mouse"></div> -->
+            <span class="scroll__text">scroll for more</span>
+            <svg class="scroll__arrow" width="13" height="12" viewBox="0 0 13 12" fill="none"
+              xmlns="http://www.w3.org/2000/svg">
+              <path d="M2.5 1L7.95455 6L2.5 11" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+            </svg>
+          </div>
           <!-- Create two rotation buttons -->
           <!-- <button class="rotateBtn" id="turnLeft"></button>
           <button class="rotateBtn" id="turnRight"></button> -->
